--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "A fresh look at basic CRUD Operations",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "Ayooluwa Adeleke",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.3"
   },
